# DetectiveSparky

./: .gitignore  LICENSE  README.md  main.py  oldsetup.py  setup.cfg  setup.py
cmd_funcs/: profile.py  query.py
src/sparky/: main.py
src/sparky/cmd_funcs/: profile.py  query.py  single_search.py
src/sparky/connection/: conn.py
