[metadata]
name = DetectiveSparky
version = 1.1.0
author = Blake Duckworth
author_email = blake.duckworth@outlook.com
description = A tool for finding code in a ServiceNow platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/00Duck/DetectiveSparky
project_urls =
    Bug Tracker = https://github.com/00Duck/DetectiveSparky/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    keyring
    Click
include_package_data = True
python_requires = >=3.6

[options.entry_points]
console_scripts =
    sparky = sparky.main:cli

[options.packages.find]
where = src